tests/fail/semantics/native_recover_requires_raw_ptr/main.kira
struct CounterState {
    var count: Int
}

@Main
function entry() {
    var state = nativeRecover<CounterState>(0)
    return
}
